--- a/FoodBook/src/main/resources/application.properties
+++ b/FoodBook/src/main/resources/application.properties
@@ -1,11 +1,15 @@
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create
 
 # Allows Hibernate to generate SQL optimized for a particular DBMS
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 
 spring.datasource.url=jdbc:mysql://localhost:3306/FoodBook?autoReconnect=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
+
+
 server.port=8080
 security.ignored=/**
