--- a/FoodBook/src/main/resources/application.properties
+++ b/FoodBook/src/main/resources/application.properties
@@ -1,11 +1,13 @@
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create-drop
 
 # Allows Hibernate to generate SQL optimized for a particular DBMS
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 
-spring.datasource.url=jdbc:mysql://localhost:3306/FoodBook?autoReconnect=true&useSSL=false
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://localhost:3306/repository?autoReconnect=true&useSSL=false
+spring.datasource.username=foodbook
+spring.datasource.password=foodbook
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 
 
@@ -21,3 +23,4 @@ spring.mail.port=25
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.auth = true
 spring.mail.properties.mail.smtp.starttls.required=false
+
