Implementirana podrška za slanje mejla za potvrdu.
VAŽNO!!! Isključiti antivirus pre debagovanja, jer može da seče i zabranjuje konekciju bez ikakvog upozorenja!

--- a/FoodBook/src/main/resources/application.properties
+++ b/FoodBook/src/main/resources/application.properties
@@ -12,15 +12,27 @@ spring.datasource.driverClassName=com.mysql.jdbc.Driver
 
 
 server.port=8080
-security.ignored=/**
+#security.ignored=/**
+
+#spring.mail.protocol = smtp
+#spring.mail.host = mail.privateemail.com
+#spring.mail.port=465
+#spring.mail.username = panel@reservation4.me
+#spring.mail.password = isa2016
+
+#spring.mail.properties.mail.smtp.starttls.enable=true
+#spring.mail.properties.mail.smtp.auth = true
+#spring.mail.properties.mail.smtp.starttls.required=true
+#spring.mail.properties.mail.smtp.ssl.trust = mail.privateemail.com
+
+
 
 spring.mail.protocol = smtp
-spring.mail.host = mail.privateemail.com
-spring.mail.username = panel@reservation4.me
-spring.mail.password = isa2016
-spring.mail.port=465
-
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.host = smtp.gmail.com
+spring.mail.username = 4MeReservation@gmail.com
+spring.mail.password = InternetSoftverskeArhitekture2016
+spring.mail.port=587
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.auth = true
-spring.mail.properties.mail.smtp.starttls.required=false
-
+spring.mail.properties.mail.smtp.ssl.trust = smtp.gmail.com
