--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ sudo: false
 before_install:
   - chmod +x FoodBook/mvnw
 install:
+  - cd FoodBook
   - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
 script: 
   - cd FoodBook
