--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
   - chmod +x FoodBook/mvnw
 install:
   - cd FoodBook
-  - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
+  - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V -e -X
 script: 
   - cd FoodBook
   - mvn clean verify
