--- a/FoodBook/src/main/resources/application.properties
+++ b/FoodBook/src/main/resources/application.properties
@@ -1,5 +1,4 @@
-#spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 
 # Allows Hibernate to generate SQL optimized for a particular DBMS
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
@@ -37,8 +36,3 @@ spring.mail.port=587
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.auth = true
 spring.mail.properties.mail.smtp.ssl.trust = smtp.gmail.com
-
-# SECURITY CONFIG, BCRYPT SALTHED HASH
-jwt.header=Authorization
-jwt.secret=yelenaSecretSalt
-jwt.expiration=3600
