--- a/FoodBook/src/main/resources/application.properties
+++ b/FoodBook/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-#spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=update
 
 # Allows Hibernate to generate SQL optimized for a particular DBMS
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
@@ -30,8 +30,8 @@ server.port=8080
 spring.mail.protocol = smtp
 spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.host = smtp.gmail.com
-spring.mail.username = 4MeReservation@gmail.com
-spring.mail.password = InternetSoftverskeArhitekture2016
+spring.mail.username = isaProjekat20162017@gmail.com
+spring.mail.password = isaProjekat
 spring.mail.port=587
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.auth = true
