Dodat GeoCoding, Geolocation GOOGLE API KEY u application.properties  fajl

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -39,5 +39,8 @@ spring.mail.properties.mail.smtp.ssl.trust = smtp.gmail.com
 
 # SECURITY CONFIG, BCRYPT SALTHED HASH
 jwt.header=Authorization
+# GOOGLE API KEY, GeoCoding, Distance Matrix API
+jelena.google.key=AIzaSyBQxJlldpTj5i6ZzufNbQY-2zK_gmYTFLc
+
 jwt.secret=yelenaSecretSalt
 jwt.expiration=3600
