--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,16 @@
 			<artifactId>scala-library</artifactId>
 			<version>2.11.0</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>com.google.maps</groupId>
+			<artifactId>google-maps-services</artifactId>
+			<version>0.1.17</version>
+		</dependency>
+
+
+
+		
 	</dependencies>
 
 	<build>
