--- a/pom.xml
+++ b/pom.xml
@@ -112,7 +112,11 @@
 			<version>0.1.17</version>
 		</dependency>
 
-
+		<dependency>
+  			<groupId>org.postgresql</groupId>
+  			<artifactId>postgresql</artifactId>
+  			<version>9.4-1201-jdbc4</version>
+		</dependency>
 
 		
 	</dependencies>
