--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,13 +3,26 @@ spring.jpa.hibernate.ddl-auto=create-drop
 
 # Allows Hibernate to generate SQL optimized for a particular DBMS
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-spring.jpa.show-sql=true
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 
-spring.datasource.url=jdbc:mysql://localhost:3306/repository?autoReconnect=true&useSSL=false
-spring.datasource.username=foodbook
-spring.datasource.password=foodbook
-spring.datasource.driverClassName=com.mysql.jdbc.Driver
+# HEROKU DEPLOYMENT PARAMS:
+spring.jpa.show-sql=false
+
+#spring.datasource.url=jdbc:mysql://localhost:3306/repository?autoReconnect=true&useSSL=false
+#spring.datasource.username=foodbook
+#spring.datasource.password=foodbook
+spring.datasource.driverClassName=org.postgresql.Driver
+
+
+# LOCAL DEPLOYMENT PARAMS:
+
+#spring.jpa.show-sql=true
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+
+#spring.datasource.url=jdbc:mysql://localhost:3306/repository?autoReconnect=true&useSSL=false
+#spring.datasource.username=foodbook
+#spring.datasource.password=foodbook
+#spring.datasource.driverClassName=com.mysql.jdbc.Driver
+
 
 
 server.port=9000
