--- a/pom.xml
+++ b/pom.xml
@@ -105,7 +105,15 @@
   			<version>9.4-1206-jdbc42</version>
 		</dependency>
 
-		
+
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-messaging</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-websocket</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
