Heroku properties change.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,19 +5,19 @@ spring.jpa.hibernate.ddl-auto=create-drop
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 # HEROKU DEPLOYMENT PARAMS:
-#spring.jpa.show-sql=false
-#spring.datasource.driverClassName=org.postgresql.Driver
-#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=false
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 # LOCAL DEPLOYMENT PARAMS:
 
-spring.jpa.show-sql=true
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+#spring.jpa.show-sql=true
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 
-spring.datasource.url=jdbc:mysql://localhost:3306/repository?autoReconnect=true&useSSL=false
-spring.datasource.username=foodbook
-spring.datasource.password=foodbook
-spring.datasource.driverClassName=com.mysql.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/repository?autoReconnect=true&useSSL=false
+#spring.datasource.username=foodbook
+#spring.datasource.password=foodbook
+#spring.datasource.driverClassName=com.mysql.jdbc.Driver
 
 
 
